erDiagram
    METODOS_PAGO {
        int id PK
        varchar nombre UK
        boolean activo
        timestamp fecha_creacion
    }

    TURNOS_CAJA {
        int id PK
        int local_id
        int usuario_id
        timestamp fecha_apertura
        timestamp fecha_cierre
        numeric monto_inicial
        numeric monto_final
        numeric monto_contado
        varchar estado
    }

    VENTAS {
        int id PK
        int local_id
        int usuario_id
        timestamp fecha
        numeric total
        varchar estado
        text observaciones
        int usuario_comercial_id
    }

    DETALLES_VENTA {
        int id PK
        int venta_id FK
        int producto_id
        int cantidad
        numeric precio_unitario
        numeric subtotal
    }

    TRANSACCIONES_POS {
        int id PK
        int venta_id FK
        int turno_caja_id FK
        int metodo_pago_id FK
        numeric monto
        numeric cambio
        timestamp fecha
        varchar estado
    }

    CARRITO_POS {
        int id PK
        int usuario_id
        int local_id
        int producto_id
        int cantidad
        numeric precio_unitario
        timestamp fecha_creacion
    }

    VENTAS ||--o{ DETALLES_VENTA : "contiene"
    VENTAS ||--o{ TRANSACCIONES_POS : "pagada con"
    TURNOS_CAJA ||--o{ TRANSACCIONES_POS : "en turno"
    METODOS_PAGO ||--o{ TRANSACCIONES_POS : "usando"
